--- a/app/src/main/res/layout/content_swipe.xml
+++ b/app/src/main/res/layout/content_swipe.xml
@@ -7,7 +7,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_swipe" tools:context="boilermake.swipemart2.SwipeActivity">
+    tools:showIn="@layout/activity_swipe" tools:context="boilermake.swipemart2.SwipeActivity"
+    android:background="#dfb210">
 
     <LinearLayout
         android:orientation="vertical"
@@ -26,24 +27,39 @@
             android:textSize="40dp"
             android:textColor="#ffffff" />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Medium Text"
+            android:id="@+id/product_name"
+            android:gravity="center"
+            android:minHeight="40dp"
+            android:textSize="25dp"
+            android:textStyle="bold" />
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="3">
 
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="45dp"
-                android:background="#3f3f3f">
+                android:background="#000000"
+                android:layout_marginLeft="45dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="45dp"
+                android:layout_marginBottom="45dp">
 
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/product_pic"
-                    android:layout_margin="10dp" />
+                    android:layout_margin="10dp"
+                    android:background="#cac88f" />
             </FrameLayout>
 
         </FrameLayout>
@@ -63,17 +79,18 @@
                 android:layout_weight="1"
                 android:layout_gravity="center"
                 android:src="@drawable/rsz_1rsz_up"
-                android:background="#211d1d" />
+                android:background="#dfb210" />
 
             <TextView
                 android:layout_width="90dp"
                 android:layout_height="match_parent"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Product Name"
-                android:id="@+id/product_name"
+                android:text="Price"
+                android:id="@+id/product_price"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:textColor="#ffffff" />
+                android:textColor="#000000"
+                android:textSize="30dp" />
 
             <ImageButton
                 android:layout_width="wrap_content"
@@ -81,7 +98,7 @@
                 android:id="@+id/img_down"
                 android:layout_weight="1"
                 android:src="@drawable/rsz_down"
-                android:background="#211d1d" />
+                android:background="#dfb210" />
 
         </LinearLayout>
 
